replaced 'magical' integer values by enum in the representation of MdC text