@@ -1,7 +1,5 @@
 package jsesh.parser.ast;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 
@@ -10,52 +8,26 @@ import java.util.List;
  * toggles) that can appear inside a cartouche, a sub-cadrat or a philology
  * group, as well as at top level.
  * <p>Built incrementally, via left-recursive grammar rules of unbounded
- * arity; unlike most other AST nodes it cannot be a record. Structural
- * equality ({@link #equals}/{@link #hashCode}) is implemented by hand to
- * compensate.
+ * arity, hence the {@link #of} factory rather than a fixed-arity constructor
+ * call at each parse site.
  *
  * @author rosmord
  */
-public final class AstBasicItemList implements AstNode {
+public record AstBasicItemList(List<AstNode> items) implements AstNode {
 
-    private final List<AstNode> items = new ArrayList<>();
-
-    void addItem(AstNode item) {
-        items.add(item);
-    }
-
-    public List<AstNode> items() {
-        return Collections.unmodifiableList(items);
+    public AstBasicItemList {
+        items = List.copyOf(items);
     }
 
     /**
      * Hand-builds a basic item list from its items, for tests.
      */
     public static AstBasicItemList of(AstNode... items) {
-        AstBasicItemList result = new AstBasicItemList();
-        for (AstNode item : items) {
-            result.addItem(item);
-        }
-        return result;
+        return new AstBasicItemList(List.of(items));
     }
 
     @Override
     public void accept(AstVisitor visitor) {
         visitor.visitBasicItemList(this);
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        return this == o || (o instanceof AstBasicItemList other && items.equals(other.items));
-    }
-
-    @Override
-    public int hashCode() {
-        return items.hashCode();
-    }
-
-    @Override
-    public String toString() {
-        return "AstBasicItemList" + items;
     }
 }
